ChangeLog for Simple Chat Client
========================= 

Version dev (unknown)
================================
* Added hide nicklist option
* Added /clear command
* Added time to invite list
* Fixed animated icon
* Changed default emoticons,sounds dir
* Added nick option in context menu
* Fixed avatar display
* Fixed sound
* Fixed offline messages
* Many bugfixes

Version 1.7.3 (07.04.2013)
================================
* Fixed replace emoticons
* Fixed logs
* Fixed commands

Version 1.7.2 (24.03.2013)
================================
* Fixed replace emoticons
* Fixed notes

Version 1.7.1 (23.03.2013)
================================
* Fixed replace emoticons
* Fixed reconnect
* Fixed avatars bug

Version 1.7.0 (15.02.2013)
================================
* Added theme dialog
* Faster reconnect after wrong login
* Added auto away turn off button
* Added commands description
* Added ctrl+shift arround
* Changed reconnect from 30 sec to 120 sec
* Changed reconnect without closing channels
* Fixed offline messages layout
* Fixed moderation
* Many bugfixes

Version 1.6.2 (04.12.2012)
================================
* Fixed auth
* Fixed edit profile

Version 1.6.1 (30.10.2012)
================================
* Fixed rank

Version 1.6.0 (29.10.2012)
================================
* Addded rank
* Added new emoticons
* Updated layouts
* Added remember last 30 messages
* Added commands /raw /all /query /quote /kban /kbanip
* Many bugfixes

Version 1.5.0 (17.07.2012)
================================
* Added find nick
* Changed channel settings layout
* Added tray notification
* Added punish reason
* Added channel avatars
* Added debug window
* Many bugfixes

Version 1.4.0 (10.03.2012)
================================
* Added avatars support
* Added minimize to tray
* Movable tabs
* Added highlight
* Added copy link to clipboard
* Enabled DEP (permanent) and ASLR on windows
* Many bugfixes

Version 1.1.3 (05.12.2011)
================================